kubernetes/templates/proxypool-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { { include "proxypool.fullname" . } }
  labels:
    { { - include "proxypool.labels" . | nindent 4 } }
spec:
  type: { { .Values.service.type } }
  ports:
    - port: { { .Values.service.port } }
      targetPort: 5555
      protocol: TCP
      name: http
  selector:
    { { - include "proxypool.selectorLabels" . | nindent 4 } }
