kubernetes/templates/proxypool-ingress.yaml
{ { - if .Values.ingress.enabled - } }
  { { - $fullName := include "proxypool.fullname" . - } }
  { { - $svcPort := .Values.service.port - } }
  { { - if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion - } }
apiVersion: networking.k8s.io/v1beta1
  { { - else - } }
apiVersion: extensions/v1beta1
  { { - end } }
kind: Ingress
metadata:
  name: { { $fullName } }
  labels:
    { { - include "proxypool.labels" . | nindent 4 } }
  { { - with .Values.ingress.annotations } }
  annotations:
    { { - toYaml . | nindent 4 } }
  { { - end } }
spec:
  { { - if .Values.ingress.tls } }
  tls:
    { { - range .Values.ingress.tls } }
    - hosts:
        { { - range .hosts } }
        - { { . | quote } }
        { { - end } }
      secretName: { { .secretName } }
    { { - end } }
  { { - end } }
  rules:
    { { - range .Values.ingress.hosts } }
    - host: { { .host | quote } }
      http:
        paths:
          { { - range .paths } }
          - path: { { . } }
            backend:
              serviceName: { { $fullName } }
              servicePort: { { $svcPort } }
          { { - end } }
    { { - end } }
  { { - end } }
